RESOLVED FIXED180216
ServiceWorkerThread's m_extendedEvents gets destroyed on the wrong thread
https://bugs.webkit.org/show_bug.cgi?id=180216
Summary ServiceWorkerThread's m_extendedEvents gets destroyed on the wrong thread
Chris Dumez
Reported 2017-11-30 13:16:47 PST
ServiceWorkerThread's m_extendedEvents gets destroyed on the wrong thread. Those events live on the worker thread so we should destroy them on the worker thread, not the main thread.
Attachments
Patch (9.18 KB, patch)
2017-11-30 13:30 PST, Chris Dumez
no flags
Patch (9.71 KB, patch)
2017-11-30 13:56 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-11-30 13:30:07 PST
Chris Dumez
Comment 2 2017-11-30 13:56:12 PST
WebKit Commit Bot
Comment 3 2017-11-30 14:35:29 PST
Comment on attachment 328019 [details] Patch Clearing flags on attachment: 328019 Committed r225351: <https://trac.webkit.org/changeset/225351>
WebKit Commit Bot
Comment 4 2017-11-30 14:35:30 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2017-11-30 14:36:32 PST
Note You need to log in before you can comment on or make changes to this bug.